frikadelle page and modified assets

--- a/css/style.css
+++ b/css/style.css
@@ -2,26 +2,38 @@
 
 /*style only used in Repetoire.html */
 
+.list-praktisk-info {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  font-size: 11px;
+  orphans: 2;
+  text-align: start;
+  text-indent: 0px;
+  text-transform: none;
+  white-space: normal;
+  widows: 2;
+  word-spacing: 0px;
+}
+
 .modal-dialog {
-      max-width: 800px;
-      margin: 30px auto;
-  }
-
-
+  max-width: 800px;
+  margin: 30px auto;
+}
 
 .modal-body {
-  position:relative;
-  padding:0px;
+  position: relative;
+  padding: 0px;
 }
 .close {
-  position:absolute;
-  right:-30px;
-  top:0;
-  z-index:999;
-  font-size:2rem;
+  position: absolute;
+  right: -30px;
+  top: 0;
+  z-index: 999;
+  font-size: 2rem;
   font-weight: normal;
-  color:#fff;
-  opacity:1;
+  color: #fff;
+  opacity: 1;
 }
 
 .top_left {
@@ -29,4 +41,3 @@
   top: 1em;
   left: 1em;
 }
-
