--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,27 @@ body {
   opacity: 1;
 }
 
-#Penetrating_0,
-#O_inside_Shade-2,
-#BangEffect {
-  visibility: hidden;
-}
+
 
 .top_left {
   position: absolute;
   top: 1em;
   left: 1em;
 }
+
+.svg-overlay {
+  position: absolute;
+  width: 100px; /* Adjust the width of the SVG as needed */
+  height: auto; /* Allow the height to adjust proportionally */
+  top: 50%; /* Position the SVG in the middle vertically */
+  left: 50%; /* Position the SVG in the middle horizontally */
+  transform: translate(-50%, -50%); /* Center the SVG */
+}
+
+.centered-svg {
+  width: 10%; /* Adjust this value as needed */
+  transform: translateX(-50%);
+  left: 50%;
+  position: relative;
+}
+
