--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@ body {
 }
 
 /*this is the danceOmatic logo*/
-.svg-overlay-logo {
+.overlay-danceOmatic-logo {
   position: absolute;
-  width: 20%; /* Adjust the width of the SVG as needed */
+  width: 13%; /* Adjust the width of the SVG as needed */
   height: auto; /* Allow the height to adjust proportionally */
-  top: 28%; /* Position the SVG in the middle vertically */
+  top: 38%; /* Position the SVG in the middle vertically */
   left: 50%; /* Position the SVG in the middle horizontally */
   transform: translate(-50%, -50%); /* Center the SVG */
+
 }
 
 .bling-container {
@@ -25,24 +26,27 @@ body {
   left: 10%;
   transform: none;
   object-position: top left;
-  opacity: 0;
+  opacity: 1;
 }
 
 
 
 
-.svg-overlay-coin {
+.overlay-coin {
   position: absolute;
-  width: 10%; 
+  width: 8%; 
   height: auto; 
   top: 73%;
   left: 10%;
-  transform: none; 
 }
 
 .svg-container {
-  position: relative;
-  height: 100px; /* Adjust this height based on the scaled SVG height */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none; /* Forhindrer, at SVG-containeren fanger musebegivenheder */
 }
 
 .zoomed-svg {
@@ -59,7 +63,7 @@ body {
     overflow: hidden;
     position: relative;
   }
-  .svg-overlay-logo {
+  .overlay-danceOmatic-logo {
     top: 60%; 
     width: 30%;
     height: auto;
@@ -77,14 +81,6 @@ body {
 .duplicate-paragraph {
   position: relative; /* Relative positioning for correct placement */
   z-index: 2; /* Higher z-index to appear above the SVG */
-}
-
-#coin8bit {
-  position: absolute;
-  left: 100%;
-  top: 220%; /* Adjust top positioning as needed */
-  width: 30%; /* Adjust the width of the coin as needed */
-  height: auto; /* Maintain aspect ratio */
 }
 
 
