--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,11 @@ body {
   position: absolute;
   width: 30rem; 
   height: auto; 
-  top: 150%;
-  left: 10%;
+  top: 50%;
+  left: 30%;
   transform: none;
   object-position: top left;
-  opacity: 1;
+  opacity: 0;
 }
 
 
@@ -34,10 +34,10 @@ body {
 
 .overlay-coin {
   position: absolute;
-  width: 8%; 
+  width: 5%; 
   height: auto; 
-  top: 73%;
-  left: 10%;
+  top: 67%;
+  left: 0%;
 }
 
 .svg-container {
@@ -51,7 +51,7 @@ body {
 
 .zoomed-svg {
   position: relative;
-  transform: scale(1.5) translateY(-20%);
+  /* transform: scale(1.5) translateY(-20%); */
   transform-origin: top;
   overflow: hidden;
 }
