--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,6 @@ body {
 }
 
 
-
-
-
 .item-appear {
   opacity: 0;
   transition: opacity 0.5s ease, top 0.9s ease;
@@ -142,3 +139,59 @@ body {
   opacity: 1;
   top: 0%
 }
+
+/* Start Styling of link to teateravisen */
+
+.link-container {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+.link-container:hover {
+  background-color: #fef7a2; /* Lys baggrund ved hover */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.link-image {
+  width: 50px; /* Bredde på billedet */
+  height: 50px; /* Højde på billedet */
+  margin-right: 15px; /* Mellemrum mellem billede og tekst */
+  object-fit: cover; /* Sikrer, at billedet fylder containeren */
+  border-radius: 5px; /* Runde hjørner på billedet */
+}
+.text-with-icon {
+    display: inline-flex;
+    align-items: center;
+}
+.text-with-icon object {
+    width: 1em; /* Adjust the width as needed */
+    height: 1em; /* Adjust the height as needed */
+    vertical-align: middle; /* Aligns the SVG vertically in the middle */
+    margin-left: 0.2em; /* Space between text and icon */
+}
+/* Stop Styling of link to teateravisen */
+
+/* zoom header image */
+.scroll-container {
+  height: 200vh; /* Makes the container taller than the viewport to allow scrolling */
+}
+
+.zoom-image {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.5);
+  }
+}
+/* Stop zoom header image */
